refactoring Sonar warnings